--- a/Blokus/src/blokus/PartieGUI.form
+++ b/Blokus/src/blokus/PartieGUI.form
@@ -29,22 +29,14 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" attributes="0">
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" attributes="0">
-                      <EmptySpace min="-2" pref="25" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="j1Name" min="-2" pref="262" max="-2" attributes="0"/>
-                          <Component id="blueBox" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="greenBox" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="j4Name" min="-2" pref="262" max="-2" attributes="0"/>
-                      </Group>
-                  </Group>
-                  <Group type="102" alignment="1" attributes="0">
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="debugLabel" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="69" max="-2" attributes="0"/>
-                  </Group>
+              <EmptySpace min="-2" pref="25" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                  <Component id="greenBox" alignment="0" max="32767" attributes="0"/>
+                  <Component id="j1Name" alignment="0" max="32767" attributes="0"/>
+                  <Component id="blueBox" alignment="0" max="32767" attributes="0"/>
+                  <Component id="j4Name" alignment="0" max="32767" attributes="0"/>
               </Group>
+              <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
                       <EmptySpace min="-2" pref="57" max="-2" attributes="0"/>
@@ -85,9 +77,7 @@
                       <Component id="blueBox" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="j1Name" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="24" max="-2" attributes="0"/>
-                      <Component id="debugLabel" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="58" max="-2" attributes="0"/>
                       <Component id="j4Name" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="greenBox" min="-2" max="-2" attributes="0"/>
@@ -228,21 +218,25 @@
     </Container>
     <Component class="javax.swing.JLabel" name="j1Name">
       <Properties>
+        <Property name="horizontalAlignment" type="int" value="0"/>
         <Property name="text" type="java.lang.String" value="joueur1"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="j4Name">
       <Properties>
+        <Property name="horizontalAlignment" type="int" value="0"/>
         <Property name="text" type="java.lang.String" value="joueur4"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="j2Name">
       <Properties>
+        <Property name="horizontalAlignment" type="int" value="0"/>
         <Property name="text" type="java.lang.String" value="joueur2"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="j3Name">
       <Properties>
+        <Property name="horizontalAlignment" type="int" value="0"/>
         <Property name="text" type="java.lang.String" value="joueur3"/>
       </Properties>
     </Component>
@@ -347,11 +341,6 @@
         </Container>
       </SubComponents>
     </Container>
-    <Component class="javax.swing.JLabel" name="debugLabel">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="jLabel2"/>
-      </Properties>
-    </Component>
     <Component class="javax.swing.JButton" name="btnBloked">
       <Properties>
         <Property name="text" type="java.lang.String" value="Je suis bloqu&#xe9; !"/>
