--- a/Blokus/src/blokus/Accueil.form
+++ b/Blokus/src/blokus/Accueil.form
@@ -25,11 +25,13 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Component id="jLabel2" alignment="0" max="32767" attributes="0"/>
           <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="96" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
               <Component id="btnJouer" min="-2" pref="178" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="57" max="-2" attributes="0"/>
-              <Component id="btnQuitter" min="-2" pref="178" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="btnRules" min="-2" pref="178" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
+              <Component id="btnQuitter" min="-2" pref="178" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -41,6 +43,7 @@
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="btnJouer" alignment="3" min="-2" pref="62" max="-2" attributes="0"/>
                   <Component id="btnQuitter" alignment="3" min="-2" pref="62" max="-2" attributes="0"/>
+                  <Component id="btnRules" alignment="3" min="-2" pref="62" max="-2" attributes="0"/>
               </Group>
           </Group>
       </Group>
@@ -68,6 +71,14 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnQuitterActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="btnRules">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="R&#xe8;gles"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnRulesActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
